--- a/azure-build-and-publish.yml
+++ b/azure-build-and-publish.yml
@@ -18,6 +18,9 @@ jobs:
     vmImage: ${{ parameters.vmImage }}
   steps:
 
+  - checkout: self
+    submodules: recursive
+
   - script: |
       curl -fsSL https://github.com/getzola/zola/releases/download/v${{ parameters.zolaVersion }}/zola-v${{ parameters.zolaVersion }}-x86_64-unknown-linux-gnu.tar.gz |tar xz
     displayName: Install Zola
