azure-build-and-publish.yml: add a way to skip CDN purging

--- a/azure-build-and-publish.yml
+++ b/azure-build-and-publish.yml
@@ -72,6 +72,7 @@ jobs:
 
   - task: AzurePowerShell@4
     displayName: Purge CDN
+    condition: and(succeeded(), ne('${{ parameters.cdnProfileName }}', 'skip'))
     inputs:
       azureSubscription: ${{ parameters.azureServiceConnectionName }}
       azurePowerShellVersion: 'LatestVersion'
