azure-build-and-publish.yml: make it so CDN parameters can be entirely omitted

--- a/azure-build-and-publish.yml
+++ b/azure-build-and-publish.yml
@@ -11,12 +11,16 @@ parameters:
 - name: 'azureServiceConnectionName'
   type: string
 - name: 'cdnProfileName'
+  default: 'skip'
   type: string
 - name: 'cdnPubPrefix'
+  default: 'unspecified'
   type: string
 - name: 'cdnEndpointName'
+  default: 'unspecified'
   type: string
 - name: 'cdnResourceGroupName'
+  default: 'unspecified'
   type: string
 - name: 'containerName'
   default: '$web'
