--- a/theme.toml
+++ b/theme.toml
@@ -1,5 +1,5 @@
 name = "wwtguide"
-description = "A theme for AAS WorldWide Telescope documentation"
+description = "A theme for WorldWide Telescope documentation"
 license = "MIT"
 homepage = "https://github.com/WorldWideTelescope/zola-wwtguide"
 min_version = "0.10.0"
